<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="pref_category_sender_mail_key" android:title="@string/pref_category_sender_mail_title">
        <CheckBoxPreference android:key="pref_use_self_sender" android:title="@string/pref_use_self_sender_title" android:summary="@string/pref_use_self_sender_summary" android:defaultValue="false" />
    	<EditTextPreference android:key="pref_sender_mail" android:title="@string/pref_sender_mail_title" />
    	<EditTextPreference android:key="pref_sender_pwd" android:title="@string/pref_sender_pwd_title" />
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_category_safe_key" android:title="@string/pref_category_safe_title">
    	<EditTextPreference android:key="pref_safe_pwd" android:title="@string/pref_safe_pwd_title" />
    	<EditTextPreference android:key="pref_safe_phonenum" android:title="@string/pref_safe_phonenum_title" />
    	<EditTextPreference android:key="pref_safe_mail" android:title="@string/pref_safe_mail_title" />
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_category_gps_key" android:title="@string/pref_category_gps_title">
    	<CheckBoxPreference android:key="pref_gps_word" android:title="@string/pref_gps_word_title" android:summary="@string/pref_gps_word_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_category_ring" android:title="@string/pref_category_ring_title">
    	<CheckBoxPreference android:key="pref_ring_word" android:title="@string/pref_ring_word_title" android:summary="@string/pref_ring_word_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_category_listen" android:title="@string/pref_category_listen_title">
    	<CheckBoxPreference android:key="pref_listen_env" android:title="@string/pref_listen_env_title" android:summary="@string/pref_listen_env_summary" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
